fixed blog content cutoff issue

--- a/bin/css/squiffles.css
+++ b/bin/css/squiffles.css
@@ -5,12 +5,12 @@ html {
   background-color: #161819;
 }
 body {
-  position: relative;
   margin: 0;
   color: #232627;
   font: 34px/1.5 'Titillium Web', sans-serif;
 }
 body.page {
+  position: relative;
   width: 8.5in;
   height: 11in;
   margin: auto;
@@ -615,15 +615,16 @@ body.page #main {
   padding-left: 0.5em;
 }
 #sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   width: 30%;
-  overflow: hidden;
+  overflow: auto;
   color: #617078;
 }
 body.page #sidebar {
+  position: absolute;
   width: 12em;
   height: 100%;
   padding: 0 2em;
